// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flow-activities > block addChild 1`] = `
"root
|-- start_0
|-- split
|---- $blockIcon$split
|---- $inlineBlocks$split
|------ branch_0
|-------- $blockOrderIcon$branch_0
|-------- test
|------ branch_1
|-------- $blockOrderIcon$branch_1
|-------- noop_0
|-- end_0"
`;

exports[`flow-activities > create dynamic split 1`] = `
"root
|-- start_0
|-- split
|---- $blockIcon$split
|---- $inlineBlocks$split
|------ branch_0
|-------- $blockOrderIcon$branch_0
|------ branch_1
|-------- $blockOrderIcon$branch_1
|-------- noop_0
|-- end_0"
`;

exports[`flow-activities > create dynamic split 2`] = `
{
  "boundsStr": "left: -290px; top: 92px; width: 580px; height: 350.1px;",
  "localBoundsStr": "left: -290px; top: 92px; width: 580px; height: 350.1px;",
}
`;

exports[`flow-activities > create dynamic split 3`] = `
{
  "boundsStr": "left: -290px; top: 196px; width: 580px; height: 246.1px;",
  "localBoundsStr": "left: -290px; top: 104px; width: 580px; height: 246.1px;",
}
`;

exports[`flow-activities > create dynamic split expanded 1`] = `
"root
|-- start_0
|-- split
|---- $blockIcon$split
|---- $inlineBlocks$split
|------ branch_0
|-------- $blockOrderIcon$branch_0
|------ branch_1
|-------- $blockOrderIcon$branch_1
|-------- noop_0
|-------- split2
|---------- $blockIcon$split2
|---------- $inlineBlocks$split2
|------------ s2_branch_0
|-------------- $blockOrderIcon$s2_branch_0
|------------ s2_branch_1
|-------------- $blockOrderIcon$s2_branch_1
|-- end_0"
`;

exports[`flow-activities > create loop empty 1`] = `
"root
|-- start_0
|-- loop_0
|---- $blockIcon$loop_0
|---- $inlineBlocks$loop_0
|------ $loopLeftEmpty$loop_0
|------ $block$loop_0
|-------- $loopRightEmpty$loop_0
|-- end_0"
`;

exports[`flow-activities > create tryCatch 1`] = `
"root
|-- start
|-- tryCatch
|---- $tryCatchIcon$tryCatch
|---- $mainInlineBlocks$tryCatch
|------ try_branch_0
|-------- $trySlot$try_branch_0
|-------- try_noop_0
|------ $catchInlineBlocks$tryCatch
|-------- catch_branch_1
|---------- $blockOrderIcon$catch_branch_1
|---------- catch_noop_0
|-------- catch_branch_2
|---------- $blockOrderIcon$catch_branch_2
|-------- catch_branch_3
|---------- $blockOrderIcon$catch_branch_3
|-- end"
`;

exports[`flow-activities > empty split addChild 1`] = `
"root
|-- start_0
|-- empty-split
|---- $blockIcon$empty-split
|---- $inlineBlocks$empty-split
|------ branch
|-------- $blockOrderIcon$branch
|-- end_0"
`;

exports[`flow-activities > extend block addChild 1`] = `
"root
|-- start_0
|-- test-extend
|---- $blockIcon$test-extend
|---- $inlineBlocks$test-extend
|------ test-extend-block
|-------- test
|-------- $blockOrderIcon$test-extend-block
|-- empty-split
|---- $blockIcon$empty-split
|---- $inlineBlocks$empty-split
|-- end_0"
`;

exports[`flow-activities > insert a dynamic split node 1`] = `
"root
|-- start_0
|-- split2
|---- $blockIcon$split2
|---- $inlineBlocks$split2
|------ b1
|-------- $blockOrderIcon$b1
|------ b2
|-------- $blockOrderIcon$b2
|-- split
|---- $blockIcon$split
|---- $inlineBlocks$split
|------ branch_0
|-------- $blockOrderIcon$branch_0
|------ branch_1
|-------- $blockOrderIcon$branch_1
|-------- noop_0
|-- end_0"
`;

exports[`flow-activities > insert a dynamic split node 2`] = `
{
  "boundsStr": "left: -290px; top: 358.1px; width: 580px; height: 350.1px;",
  "localBoundsStr": "left: -290px; top: 358.1px; width: 580px; height: 350.1px;",
}
`;

exports[`flow-activities > insert a dynamic split node 3`] = `
{
  "boundsStr": "left: -290px; top: 462.1px; width: 580px; height: 246.1px;",
  "localBoundsStr": "left: -290px; top: 104px; width: 580px; height: 246.1px;",
}
`;

exports[`flow-activities > insert a dynamic split node 4`] = `
{
  "boundsStr": "left: -290px; top: 92px; width: 580px; height: 250.10000000000002px;",
  "localBoundsStr": "left: -290px; top: 92px; width: 580px; height: 250.1px;",
}
`;

exports[`flow-activities > insert a dynamic split node 5`] = `
{
  "boundsStr": "left: -290px; top: 196px; width: 580px; height: 146.1px;",
  "localBoundsStr": "left: -290px; top: 104px; width: 580px; height: 146.1px;",
}
`;

exports[`flow-activities > loop addChild 1`] = `
"root
|-- start_0
|-- loop_0
|---- $blockIcon$loop_0
|---- $inlineBlocks$loop_0
|------ $loopLeftEmpty$loop_0
|------ $block$loop_0
|-------- $loopRightEmpty$loop_0
|-------- test1
|-------- test2
|-- end_0"
`;

exports[`flow-activities > split addChild 1`] = `
"root
|-- start_0
|-- split
|---- $blockIcon$split
|---- $inlineBlocks$split
|------ branch_0
|-------- $blockOrderIcon$branch_0
|------ branch_2
|-------- $blockOrderIcon$branch_2
|------ branch_1
|-------- $blockOrderIcon$branch_1
|-------- noop_0
|-- end_0"
`;

exports[`flow-activities > tryCatch add branch 1`] = `
"root
|-- start
|-- tryCatch
|---- $tryCatchIcon$tryCatch
|---- $mainInlineBlocks$tryCatch
|------ try_branch_0
|-------- $trySlot$try_branch_0
|-------- try_noop_0
|------ $catchInlineBlocks$tryCatch
|-------- catch_branch_1
|---------- $blockOrderIcon$catch_branch_1
|---------- catch_noop_0
|-------- catch_branch_2
|---------- $blockOrderIcon$catch_branch_2
|-------- catch_branch_3
|---------- $blockOrderIcon$catch_branch_3
|-------- xxxx
|---------- $blockOrderIcon$xxxx
|-- end"
`;
